@@ -31,3 +31,4 @@ end
 require 'gecoder/interface/constraints/int_enum/distinct'
 require 'gecoder/interface/constraints/int_enum/equality'
 require 'gecoder/interface/constraints/int_enum/channel'
+require 'gecoder/interface/constraints/int_enum/element'
